# admin

./: Dockerfile  Makefile  README.md  docker-compose.yml  example.env  pyproject.toml
migrations/: env.py
migrations/versions/: 0001_init.py  0002_add_topics.py  0003_add_post.py  0004_avatar_ml_metadata.py  0005_avatar_on_delete.py
publication_admin/: main.py  settings.py
publication_admin/api/: app.py  deps.py  errors.py
publication_admin/api/routers/: auth.py  avatars.py  files.py  meta.py  posts.py  topics.py  users.py
publication_admin/auth/: email_auth.py  email_messages.py  jwt.py  otp.py  utils.py
publication_admin/db/: engine.py  models.py  storages.py
publication_admin/media_storage/: s3.py
publication_admin/services/avatars_ai/: __init__.py  service.py  text.py
publication_admin/services/avatars_ai/ml_images/: __init__.py  dto.py  ml_images.py
tests/: .env.pytest  conftest.py
tests/api/: conftest.py  test_auth_router.py  test_avatars_router.py  test_deps.py  test_files.py  test_posts.py  test_topics_router.py
tests/auth/: test_jwt.py  test_otp.py
